--- a/resume-Amin/index.html
+++ b/resume-Amin/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>رزومه من | Front-End Developer</title>
+    <title>رزومه امین مناجاتی | کارشناس شبکه و زیرساخت</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="resume-header">
         <div class="container header-content">
-            <img src="https://via.placeholder.com/150" alt="آواتار من" class="avatar">
+            <img src="https://via.placeholder.com/150" alt="امین مناجاتی" class="avatar">
             <div class="header-text">
-                <h1>نام و نام خانوادگی شما</h1>
-                <h2>توسعه‌دهنده فرانت‌اند (Front-End Developer)</h2>
+                <h1>امین مناجاتی [cite: 4]</h1>
+                <h2>کارشناس شبکه و زیرساخت | در حال یادگیری مهندسی نرم افزار [cite: 5]</h2>
             </div>
         </div>
     </header>
@@ -23,25 +23,34 @@
             <section class="contact-info">
                 <h3>تماس</h3>
                 <ul>
-                    <li>📧 email@example.com</li>
-                    <li>🌐 linkedin.com/in/yourname</li>
-                    <li>💻 github.com/yourname</li>
+                    <li>📧 aminmonajati@gmail.com [cite: 33]</li>
+                    <li>📞 09103892107 [cite: 32]</li>
+                    <li>💻 github.com/MRAmin0 </li>
+                    <li>🌐 linkedin.com/in/your-profile</li>
                 </ul>
             </section>
 
             <section class="skills">
                 <h3>مهارت‌ها</h3>
                 <div class="skill-item">
-                    <span>HTML/CSS</span>
-                    <div class="progress-bar"><div class="fill" style="width: 90%"></div></div>
+                    <span>Linux / Windows Server [cite: 72, 73]</span>
+                    <div class="progress-bar"><div class="fill" style="width: 80%"></div></div>
                 </div>
                 <div class="skill-item">
-                    <span>JavaScript</span>
-                    <div class="progress-bar"><div class="fill" style="width: 70%"></div></div>
+                    <span>Network (ESXi, VMware, Network+) [cite: 71, 75]</span>
+                    <div class="progress-bar"><div class="fill" style="width: 75%"></div></div>
+                </div>
+                 <div class="skill-item">
+                    <span>Python [cite: 70]</span>
+                    <div class="progress-bar"><div class="fill" style="width: 65%"></div></div>
                 </div>
                 <div class="skill-item">
-                    <span>React</span>
-                    <div class="progress-bar"><div class="fill" style="width: 50%"></div></div>
+                    <span>GIT [cite: 72]</span>
+                    <div class="progress-bar"><div class="fill" style="width: 60%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Flutter / Android Studio [cite: 77, 78]</span>
+                    <div class="progress-bar"><div class="fill" style="width: 40%"></div></div>
                 </div>
             </section>
         </aside>
@@ -49,20 +58,25 @@
         <div class="main-content">
             <section id="about">
                 <h3>درباره من</h3>
-                <p>من یک توسعه‌دهنده مشتاق با ۲ سال تجربه در طراحی رابط کاربری هستم. هدف من خلق تجربه‌های وب زیبا و کارآمد است.</p>
+                <p>
+                    کارشناس شبکه و زیرساخت با دید فنی قوی در سیستم‌ها و سرورها، در حال یادگیری مهندسی نرم‌افزار و توسعه
+                    اپلیکیشن‌های موبایل. علاقه‌مند به طراحی معماری نرم‌افزار، برنامه‌نویسی اندروید با Java و Kotlin، و آشنایی اولیه با
+                    Flutter. با پشتوانه‌ی تجربه در زیرساخت و درک ساختار سیستم‌ها، به دنبال فرصت‌هایی برای رشد در تیم‌های توسعه
+                    نرم‌افزار و ساخت پروژه‌های واقعی و مقیاس‌پذیر هستم. [cite: 85]
+                </p>
             </section>
 
             <section id="experience">
                 <h3>سوابق شغلی</h3>
                 <div class="job-item">
-                    <h4>توسعه‌دهنده جونیور - شرکت الف</h4>
-                    <span class="date">۱۴۰۱ - اکنون</span>
-                    <p>مسئولیت طراحی لندینگ پیج‌ها و بهینه‌سازی کدها.</p>
+                    <h4>کارشناس فنی شبکه و زیرساخت [cite: 7] - ارمغان راه طلایی [cite: 7]</h4>
+                    <span class="date">تیر ۱۴۰۳ تا مرداد ۱۴۰۴ (۱ سال و ۱ ماه) [cite: 8]</span>
+                    <p>ارائه پشتیبانی سطح ۱ و ۲ به کاربران، شامل نصب و پیکربندی سخت‌افزار و نرم‌افزار. [cite: 9] مدیریت و نگهداری سرورهای HPE و پایش عملکرد رک‌ها. [cite: 9]</p>
                 </div>
                 <div class="job-item">
-                    <h4>کارآموز UI - شرکت ب</h4>
-                    <span class="date">۱۴۰۰ - ۱۴۰۱</span>
-                    <p>یادگیری اصول طراحی و همکاری با تیم فنی.</p>
+                    <h4>پشتیبانی فنی مرکز تماس [cite: 10] - داده پردازی فن آوا [cite: 10]</h4>
+                    <span class="date">تیر ۱۴۰۲ تا مهر ۱۴۰۲ (۳ ماه) [cite: 28]</span>
+                    <p>پاسخگویی تلفنی به مشکلات اینترنت ADSL و TD-LTE [cite: 25] و عیب‌یابی و راهنمایی تنظیم مودم و تجهیزات. [cite: 25]</p>
                 </div>
             </section>
 
@@ -70,14 +84,14 @@
                 <h3>پروژه‌ها</h3>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h4>پروژه فروشگاهی</h4>
-                        <p>یک سایت فروشگاهی ساده با سبد خرید.</p>
-                        <a href="#">مشاهده پروژه</a>
+                        <h4>پروفایل نمونه کارها در گیت‌هاب</h4>
+                        <p>مجموعه‌ای از پروژه‌ها و تمرین‌های شخصی من در زمینه شبکه و برنامه‌نویسی.</p>
+                        <a href="https://github.com/MRAmin0" target="_blank">مشاهده گیت‌هاب </a>
                     </div>
                     <div class="project-card">
-                        <h4>تسک منیجر</h4>
-                        <p>برنامه مدیریت وظایف با جاوااسکریپت خالص.</p>
-                        <a href="#">مشاهده پروژه</a>
+                        <h4>نام پروژه دوم (مثلاً: اپلیکیشن اندروید)</h4>
+                        <p>توضیح کوتاهی درباره این پروژه، تکنولوژی‌های استفاده شده و چالشی که حل کرده است.</p>
+                        <a href="#">(لینک پروژه در صورت وجود)</a>
                     </div>
                 </div>
             </section>
@@ -85,8 +99,8 @@
             <section id="education">
                  <h3>تحصیلات</h3>
                  <div class="edu-item">
-                     <h4>کارشناسی مهندسی کامپیوتر</h4>
-                     <p>دانشگاه تهران | ۱۳۹۶ - ۱۴۰۰</p>
+                     <h4>کارشناسی - فناوری اطلاعات IT [cite: 36]</h4>
+                     <p>دانشگاه ملی مهارت شهید شمسی پور [cite: 37] | (در حال تحصیل از ۱۴۰۱ [cite: 44])</p>
                  </div>
             </section>
         </div>
