--- a/resume-Amin/index.html
+++ b/resume-Amin/index.html
@@ -12,8 +12,8 @@
         <div class="container header-content">
             <img src="https://via.placeholder.com/150" alt="امین مناجاتی" class="avatar">
             <div class="header-text">
-                <h1>امین مناجاتی [cite: 4]</h1>
-                <h2>کارشناس شبکه و زیرساخت | در حال یادگیری مهندسی نرم افزار [cite: 5]</h2>
+                <h1>امین مناجاتی</h1>
+                <h2>کارشناس شبکه و زیرساخت | در حال یادگیری مهندسی نرم افزار</h2>
             </div>
         </div>
     </header>
@@ -23,9 +23,9 @@
             <section class="contact-info">
                 <h3>تماس</h3>
                 <ul>
-                    <li>📧 aminmonajati@gmail.com [cite: 33]</li>
-                    <li>📞 09103892107 [cite: 32]</li>
-                    <li>💻 github.com/MRAmin0 </li>
+                    <li>📧 aminmonajati@gmail.com</li>
+                    <li>📞 09103892107</li>
+                    <li>💻 github.com/MRAmin0</li>
                     <li>🌐 linkedin.com/in/your-profile</li>
                 </ul>
             </section>
@@ -33,23 +33,23 @@
             <section class="skills">
                 <h3>مهارت‌ها</h3>
                 <div class="skill-item">
-                    <span>Linux / Windows Server [cite: 72, 73]</span>
+                    <span>Linux / Windows Server</span>
                     <div class="progress-bar"><div class="fill" style="width: 80%"></div></div>
                 </div>
                 <div class="skill-item">
-                    <span>Network (ESXi, VMware, Network+) [cite: 71, 75]</span>
+                    <span>Network (ESXi, VMware, Network+)</span>
                     <div class="progress-bar"><div class="fill" style="width: 75%"></div></div>
                 </div>
                  <div class="skill-item">
-                    <span>Python [cite: 70]</span>
+                    <span>Python</span>
                     <div class="progress-bar"><div class="fill" style="width: 65%"></div></div>
                 </div>
                 <div class="skill-item">
-                    <span>GIT [cite: 72]</span>
+                    <span>GIT</span>
                     <div class="progress-bar"><div class="fill" style="width: 60%"></div></div>
                 </div>
                 <div class="skill-item">
-                    <span>Flutter / Android Studio [cite: 77, 78]</span>
+                    <span>Flutter / Android Studio</span>
                     <div class="progress-bar"><div class="fill" style="width: 40%"></div></div>
                 </div>
             </section>
@@ -62,21 +62,21 @@
                     کارشناس شبکه و زیرساخت با دید فنی قوی در سیستم‌ها و سرورها، در حال یادگیری مهندسی نرم‌افزار و توسعه
                     اپلیکیشن‌های موبایل. علاقه‌مند به طراحی معماری نرم‌افزار، برنامه‌نویسی اندروید با Java و Kotlin، و آشنایی اولیه با
                     Flutter. با پشتوانه‌ی تجربه در زیرساخت و درک ساختار سیستم‌ها، به دنبال فرصت‌هایی برای رشد در تیم‌های توسعه
-                    نرم‌افزار و ساخت پروژه‌های واقعی و مقیاس‌پذیر هستم. [cite: 85]
+                    نرم‌افزار و ساخت پروژه‌های واقعی و مقیاس‌پذیر هستم.
                 </p>
             </section>
 
             <section id="experience">
                 <h3>سوابق شغلی</h3>
                 <div class="job-item">
-                    <h4>کارشناس فنی شبکه و زیرساخت [cite: 7] - ارمغان راه طلایی [cite: 7]</h4>
-                    <span class="date">تیر ۱۴۰۳ تا مرداد ۱۴۰۴ (۱ سال و ۱ ماه) [cite: 8]</span>
-                    <p>ارائه پشتیبانی سطح ۱ و ۲ به کاربران، شامل نصب و پیکربندی سخت‌افزار و نرم‌افزار. [cite: 9] مدیریت و نگهداری سرورهای HPE و پایش عملکرد رک‌ها. [cite: 9]</p>
+                    <h4>کارشناس فنی شبکه و زیرساخت - ارمغان راه طلایی</h4>
+                    <span class="date">تیر ۱۴۰۳ تا مرداد ۱۴۰۴ (۱ سال و ۱ ماه)</span>
+                    <p>ارائه پشتیبانی سطح ۱ و ۲ به کاربران، شامل نصب و پیکربندی سخت‌افزار و نرم‌افزار. مدیریت و نگهداری سرورهای HPE و پایش عملکرد رک‌ها.</p>
                 </div>
                 <div class="job-item">
-                    <h4>پشتیبانی فنی مرکز تماس [cite: 10] - داده پردازی فن آوا [cite: 10]</h4>
-                    <span class="date">تیر ۱۴۰۲ تا مهر ۱۴۰۲ (۳ ماه) [cite: 28]</span>
-                    <p>پاسخگویی تلفنی به مشکلات اینترنت ADSL و TD-LTE [cite: 25] و عیب‌یابی و راهنمایی تنظیم مودم و تجهیزات. [cite: 25]</p>
+                    <h4>پشتیبانی فنی مرکز تماس - داده پردازی فن آوا</h4>
+                    <span class="date">تیر ۱۴۰۲ تا مهر ۱۴۰۲ (۳ ماه)</span>
+                    <p>پاسخگویی تلفنی به مشکلات اینترنت ADSL و TD-LTE و عیب‌یابی و راهنمایی تنظیم مودم و تجهیزات.</p>
                 </div>
             </section>
 
@@ -86,7 +86,7 @@
                     <div class="project-card">
                         <h4>پروفایل نمونه کارها در گیت‌هاب</h4>
                         <p>مجموعه‌ای از پروژه‌ها و تمرین‌های شخصی من در زمینه شبکه و برنامه‌نویسی.</p>
-                        <a href="https://github.com/MRAmin0" target="_blank">مشاهده گیت‌هاب </a>
+                        <a href="https://github.com/MRAmin0" target="_blank">مشاهده گیت‌هاب</a>
                     </div>
                     <div class="project-card">
                         <h4>نام پروژه دوم (مثلاً: اپلیکیشن اندروید)</h4>
@@ -99,15 +99,15 @@
             <section id="education">
                  <h3>تحصیلات</h3>
                  <div class="edu-item">
-                     <h4>کارشناسی - فناوری اطلاعات IT [cite: 36]</h4>
-                     <p>دانشگاه ملی مهارت شهید شمسی پور [cite: 37] | (در حال تحصیل از ۱۴۰۱ [cite: 44])</p>
+                     <h4>کارشناسی - فناوری اطلاعات IT</h4>
+                     <p>دانشگاه ملی مهارت شهید شمسی پور | (در حال تحصیل از ۱۴۰۱)</p>
                  </div>
             </section>
         </div>
     </main>
 
     <footer class="resume-footer">
-        <p>© ۲۰۲۴ تمامی حقوق محفوظ است.</p>
+        <p>© ۲۰۲۵ تمامی حقوق محفوظ است.</p>
     </footer>
 
 </body>
