--- a/resume-Amin/index.html
+++ b/resume-Amin/index.html
@@ -26,7 +26,7 @@
                     <li>📧 aminmonajati@gmail.com</li>
                     <li>📞 09103892107</li>
                     <li>💻 github.com/MRAmin0</li>
-                    <li>🌐 linkedin.com/in/your-profile</li>
+                    <li>🌐 linkedin.com/in/amin-monajati</li>
                 </ul>
             </section>
 
@@ -84,18 +84,18 @@
                 <h3>پروژه‌ها</h3>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h4>پروفایل نمونه کارها در گیت‌هاب</h4>
-                        <p>مجموعه‌ای از پروژه‌ها و تمرین‌های شخصی من در زمینه شبکه و برنامه‌نویسی.</p>
-                        <a href="https://github.com/MRAmin0" target="_blank">مشاهده گیت‌هاب</a>
+                        <h4>اپلیکیشن هواشناسی Weatherly</h4>
+                        <p>اپ هواشناسی با Flutter و Dart با پس‌زمینه انیمیشنی و پیش‌بینی ۵ روزه. (تکنولوژی: Flutter, Dart, OpenWeatherMap API)</p>
+                        <a href="https://github.com/MRAmin0/weatherly_app" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
+                        <a href="https://weathery-apps.netlify.app/" target="_blank" rel="noopener noreferrer" style="margin-right: 10px;">مشاهده آنلاین</a>
                     </div>
                     <div class="project-card">
-                        <h4>نام پروژه دوم (مثلاً: اپلیکیشن اندروید)</h4>
-                        <p>توضیح کوتاهی درباره این پروژه، تکنولوژی‌های استفاده شده و چالشی که حل کرده است.</p>
-                        <a href="#">(لینک پروژه در صورت وجود)</a>
+                        <h4>اسکنر فایل‌های تکراری</h4>
+                        <p>اسکریپت پایتون که با هش SHA-256 فایل‌های تکراری را در یک مسیر پیدا می‌کند. (تکنولوژی: Python, Hashing)</p>
+                        <a href="https://github.com/MRAmin0/Duplicate-File-Scanner" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
                     </div>
                 </div>
             </section>
-
             <section id="education">
                  <h3>تحصیلات</h3>
                  <div class="edu-item">
