--- a/resume-Amin/index.html
+++ b/resume-Amin/index.html
@@ -10,7 +10,7 @@
 
     <header class="resume-header">
         <div class="container header-content">
-            <img src="" alt="امین مناجاتی" class="avatar">
+            <img src="./assets/images/IMG-614.jpg" alt="امین مناجاتی" class="avatar">
             <div class="header-text">
                 <h1>امین مناجاتی</h1>
                 <h2>کارشناس شبکه و زیرساخت | در حال یادگیری مهندسی نرم افزار</h2>
