update the data on desktop site

--- a/homepage_desktop-Amin/index.html
+++ b/homepage_desktop-Amin/index.html
@@ -3,100 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>استارتاپ نکست | صفحه اصلی</title>
+    <title>استارتاپ نِکست | راهکارهای نوین دیجیتال</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <nav class="desktop-nav">
-        <div class="container nav-flex">
-            <div class="logo">NEXT STARTUP</div>
-            <ul class="nav-links">
-                <li><a href="#home">خانه</a></li>
-                <li><a href="#features">ویژگی‌ها</a></li>
+    <header class="main-header">
+        <nav class="container">
+            <div class="logo">نِکست (Next)</div>
+            <ul class="nav-menu">
+                <li><a href="#hero">خانه</a></li>
+                <li><a href="#services">خدمات</a></li>
+                <li><a href="#about">درباره ما</a></li>
                 <li><a href="#pricing">قیمت‌ها</a></li>
-                <li><a href="#contact" class="btn-primary">تماس با ما</a></li>
+                <li><a href="#contact" class="btn-primary">تماس</a></li>
             </ul>
-        </div>
-    </nav>
-
-    <header id="home" class="hero-section">
-        <div class="container hero-content">
-            <h1>آینده کسب‌وکار شما اینجاست</h1>
-            <p>ما به شما کمک می‌کنیم تا با ابزارهای مدرن، سریع‌تر رشد کنید.</p>
-            <button class="btn-cta">همین حالا شروع کنید</button>
-        </div>
+        </nav>
     </header>
 
-    <section id="features" class="container section-padding">
-        <h2 class="section-title">چرا ما؟</h2>
-        <div class="features-grid">
-            <div class="feature-card">
-                <div class="icon">🚀</div>
-                <h3>سرعت بالا</h3>
-                <p>سیستم ما برای حداکثر سرعت بهینه‌سازی شده است.</p>
+    <main>
+        <section id="hero" class="hero-section">
+            <div class="container hero-content">
+                <h1>آینده کسب‌وکار شما، امروز</h1>
+                <p>ما به رشد سریع‌تر شما با ابزارهای هوشمند و تحلیل داده کمک می‌کنیم.</p>
+                <a href="#pricing" class="btn-cta">طرح‌ها را ببینید</a>
             </div>
-            <div class="feature-card">
-                <div class="icon">🔒</div>
-                <h3>امنیت کامل</h3>
-                <p>اطلاعات شما با پیشرفته‌ترین متدها رمزنگاری می‌شود.</p>
-            </div>
-            <div class="feature-card">
-                <div class="icon">💡</div>
-                <h3>پشتیبانی هوشمند</h3>
-                <p>پشتیبانی ۲۴ ساعته با هوش مصنوعی و اپراتور.</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="pricing" class="bg-light section-padding">
-        <div class="container">
-            <h2 class="section-title">طرح‌های قیمتی</h2>
-            <div class="pricing-grid">
-                <div class="price-card">
-                    <h3>پایه</h3>
-                    <div class="price">۱۹۹,۰۰۰ تومان<span>/ماهانه</span></div>
-                    <ul>
-                        <li>۵ پروژه</li>
-                        <li>پشتیبانی ایمیلی</li>
-                    </ul>
-                    <button class="btn-outline">انتخاب</button>
+        <section id="services" class="container section-padding">
+            <h2 class="section-title">خدمات کلیدی ما</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <h3>تحلیل داده هوشمند</h3>
+                    <p>ما داده‌های پیچیده شما را به بینش‌های عملی و قابل فهم تبدیل می‌کنیم.</p>
                 </div>
-                <div class="price-card featured">
-                    <h3>حرفه‌ای</h3>
-                    <div class="price">۴۹۹,۰۰۰ تومان<span>/ماهانه</span></div>
-                    <ul>
-                        <li>پروژه نامحدود</li>
-                        <li>پشتیبانی اختصاصی</li>
-                    </ul>
-                    <button class="btn-primary">انتخاب</button>
+                <div class="feature-card">
+                    <h3>بازاریابی دیجیتال</h3>
+                    <p>با استراتژی‌های هدفمند ما، به مخاطبان بیشتری دست پیدا کنید و فروش خود را افزایش دهید.</p>
                 </div>
-                <div class="price-card">
-                    <h3>سازمانی</h3>
-                    <div class="price">تماس بگیرید</div>
-                    <ul>
-                        <li>همه امکانات</li>
-                        <li>سرور اختصاصی</li>
-                    </ul>
-                    <button class="btn-outline">انتخاب</button>
+                <div class="feature-card">
+                    <h3>توسعه نرم‌افزار ابری</h3>
+                    <p>از ایده تا اجرا، ما اپلیکیشن‌های وب و موبایل مقیاس‌پذیر برای نیازهای شما می‌سازیم.</p>
                 </div>
             </div>
-        </div>
-    </section>
-    
-    <footer class="main-footer">
+        </section>
+
+        <section id="about" class="section-padding bg-light">
+            <div class="container about-flex">
+                <div class="about-text">
+                    <h2 class="section-title">درباره نِکست</h2>
+                    <p>ما یک تیم خلاق از مهندسان و تحلیلگران هستیم که ماموریت داریم بهترین راهکارها را برای چالش‌های دیجیتال شما ارائه دهیم. تخصص ما در ترکیب هوش مصنوعی، تکنولوژی و طراحی است تا به شما مزیت رقابتی بدهیم.</p>
+                </div>
+                <div class="about-image">
+                    <img src="https://via.placeholder.com/450x300?text=Our+Team" alt="تیم ما">
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio" class="container section-padding">
+            <h2 class="section-title">نمونه کارهای موفق</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/400x300?text=Project+Alpha" alt="پروژه آلفا">
+                    <div class="portfolio-info">
+                        <h4>پروژه داشبورد آنالیتیکس</h4>
+                        <p>یک داشبورد تحلیلی سفارشی برای شرکت آلفا.</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/400x300?text=Project+Beta" alt="پروژه بتا">
+                    <div class="portfolio-info">
+                        <h4>کمپین بازاریابی بتا</h4>
+                        <p>طراحی و اجرای کمپین دیجیتال مارکتینگ ۳۶۰ درجه.</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/400x300?text=Project+Gamma" alt="پروژه گاما">
+                    <div class="portfolio-info">
+                        <h4>اپلیکیشن موبایل گاما</h4>
+                        <p>توسعه اپلیکیشن خدمات مشتریان برای پلتفرم‌های iOS و اندروید.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="pricing" class="section-padding bg-light">
+            <div class="container">
+                <h2 class="section-title">طرح‌های قیمت‌گذاری</h2>
+                <div class="pricing-grid">
+                    <div class="price-card">
+                        <h3>پایه (Basic)</h3>
+                        <div class="price">۱,۹۹۰ تومان <span>/ ماه</span></div>
+                        <ul>
+                            <li>۱۰ گزارش ماهانه</li>
+                            <li>۵ گیگابایت فضا</li>
+                            <li>پشتیبانی ایمیلی</li>
+                        </ul>
+                        <a href="#" class="btn-outline">انتخاب طرح</a>
+                    </div>
+                    <div class="price-card featured">
+                        <h3>حرفه‌ای (Pro)</h3>
+                        <div class="price">۴,۹۹۰ تومان <span>/ ماه</span></div>
+                        <ul>
+                            <li>گزارش نامحدود</li>
+                            <li>۵۰ گیگابایت فضا</li>
+                            <li>پشتیبانی ۲۴/۷ تلفنی</li>
+                            <li>تحلیلگر اختصاصی</li>
+                        </ul>
+                        <a href="#" class="btn-primary">انتخاب طرح</a>
+                    </div>
+                    <div class="price-card">
+                        <h3>سازمانی (Enterprise)</h3>
+                        <div class="price">تماس بگیرید</div>
+                        <ul>
+                            <li>تمامی امکانات حرفه‌ای</li>
+                            <li>فضای نامحدود</li>
+                            <li>سرور اختصاصی و API</li>
+                        </ul>
+                        <a href="#" class="btn-outline">تماس با فروش</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="testimonials" class="container section-padding">
+             <h2 class="section-title">نظرات مشتریان ما</h2>
+             <div class="testimonial">
+                <blockquote>
+                    "همکاری با تیم «نکست» یک نقطه عطف برای کسب‌وکار ما بود. تحلیل‌های دقیق آن‌ها به ما کمک کرد فروش خود را در یک فصل تا ۴۰٪ افزایش دهیم."
+                </blockquote>
+                <cite>- سارا رضایی، مدیرعامل شرکت آلفا</cite>
+             </div>
+        </section>
+
+    </main>
+
+    <footer id="contact" class="main-footer">
         <div class="container footer-grid">
-             <div>
-                 <h4>درباره ما</h4>
-                 <p>توضیحات کوتاه درباره برند.</p>
-             </div>
-             <div>
-                 <h4>لینک‌های مفید</h4>
-                 <ul>
-                     <li><a href="#">قوانین</a></li>
-                     <li><a href="#">حریم خصوصی</a></li>
-                 </ul>
-             </div>
+            <div>
+                <h4>درباره نِکست</h4>
+                <p>ما ارائه‌دهنده راهکارهای نوین دیجیتال برای رشد کسب‌وکارها هستیم.</p>
+                <p>&copy; 2025 نِکست. تمامی حقوق محفوظ است.</p>
+            </div>
+            <div>
+                <h4>لینک‌های سریع</h4>
+                <ul>
+                    <li><a href="#services">خدمات</a></li>
+                    <li><a href="#about">درباره ما</a></li>
+                    <li><a href="#portfolio">نمونه کارها</a></li>
+                    <li><a href="#">قوانین و مقررات</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>تماس با ما</h4>
+                <p>ایمیل: info@next-startup.com</p>
+                <p>تلفن: ۰۲۱-۱۲۳۴۵۶۷۸</p>
+                <div class="social-links">
+                    <a href="#">لینکدین</a> | <a href="#">توییتر</a>
+                </div>
+            </div>
         </div>
     </footer>
 
