update the images

--- a/homepage_desktop-Amin/index.html
+++ b/homepage_desktop-Amin/index.html
@@ -65,7 +65,7 @@
                     <p>ما یک تیم خلاق از مهندسان و تحلیلگران هستیم که ماموریت داریم بهترین راهکارها را برای چالش‌های دیجیتال شما ارائه دهیم. تخصص ما در ترکیب هوش مصنوعی، تکنولوژی و طراحی است تا به شما مزیت رقابتی بدهیم.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884994?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHRlYW0lMjB3b3JrfGVufDB8fDB8fHww" alt="تیم ما">
+                    <img src="https://placehold.co/450x300/555555/ffffff?text=Our+Team" alt="تیم ما">
                 </div>
             </div>
         </section>
@@ -74,21 +74,21 @@
             <h2 class="section-title">نمونه کارهای موفق</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1579762715104-20a2d5993b76?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGRhc2hib2FyZCUyMGFuYWx5dGljc3xlbnwwfHwwfHx8MA%3D%3D" alt="پروژه داشبورد آنالیتیکس">
+                     <img src="https://placehold.co/400x300/007BFF/ffffff?text=Project+Analytics" alt="پروژه داشبورد آنالیتیکس">
                     <div class="portfolio-info">
                         <h4>پروژه داشبورد آنالیتیکس</h4>
                         <p>یک داشبورد تحلیلی سفارشی برای شرکت آلفا.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1520607162513-772a1d0c5544?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="کمپین بازاریابی بتا">
+                     <img src="https://placehold.co/400x300/28a745/ffffff?text=Digital+Marketing" alt="کمپین بازاریابی بتا">
                     <div class="portfolio-info">
                         <h4>کمپین بازاریابی بتا</h4>
                         <p>طراحی و اجرای کمپین دیجیتال مارکتینگ ۳۶۰ درجه.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fG1vYmlsZSUyMGFwcCUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="اپلیکیشن موبایل گاما">
+                     <img src="https://placehold.co/400x300/ffc107/333333?text=Mobile+App" alt="اپلیکیشن موبایل گاما">
                     <div class="portfolio-info">
                         <h4>اپلیکیشن موبایل گاما</h4>
                         <p>توسعه اپلیکیشن خدمات مشتریان برای پلتفرم‌های iOS و اندروید.</p>
