--- a/homepage_desktop-Amin/index.html
+++ b/homepage_desktop-Amin/index.html
@@ -65,7 +65,7 @@
                     <p>ما یک تیم خلاق از مهندسان و تحلیلگران هستیم که ماموریت داریم بهترین راهکارها را برای چالش‌های دیجیتال شما ارائه دهیم. تخصص ما در ترکیب هوش مصنوعی، تکنولوژی و طراحی است تا به شما مزیت رقابتی بدهیم.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://placehold.co/450x300/555555/ffffff?text=Our+Team" alt="تیم ما">
+                    <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=600" alt="تیم ما">
                 </div>
             </div>
         </section>
@@ -74,21 +74,21 @@
             <h2 class="section-title">نمونه کارهای موفق</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                     <img src="https://placehold.co/400x300/007BFF/ffffff?text=Project+Analytics" alt="پروژه داشبورد آنالیتیکس">
+                     <img src="https://images.pexels.com/photos/326503/pexels-photo-326503.jpeg?auto=compress&cs=tinysrgb&w=400" alt="پروژه داشبورد آنالیتیکس">
                     <div class="portfolio-info">
                         <h4>پروژه داشبورد آنالیتیکس</h4>
                         <p>یک داشبورد تحلیلی سفارشی برای شرکت آلفا.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="https://placehold.co/400x300/28a745/ffffff?text=Digital+Marketing" alt="کمپین بازاریابی بتا">
+                     <img src="https://images.pexels.com/photos/3194519/pexels-photo-3194519.jpeg?auto=compress&cs=tinysrgb&w=400" alt="کمپین بازاریابی بتا">
                     <div class="portfolio-info">
                         <h4>کمپین بازاریابی بتا</h4>
                         <p>طراحی و اجرای کمپین دیجیتال مارکتینگ ۳۶۰ درجه.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="https://placehold.co/400x300/ffc107/333333?text=Mobile+App" alt="اپلیکیشن موبایل گاما">
+                     <img src="https://images.pexels.com/photos/2047905/pexels-photo-2047905.jpeg?auto=compress&cs=tinysrgb&w=400" alt="اپلیکیشن موبایل گاما">
                     <div class="portfolio-info">
                         <h4>اپلیکیشن موبایل گاما</h4>
                         <p>توسعه اپلیکیشن خدمات مشتریان برای پلتفرم‌های iOS و اندروید.</p>
