--- a/homepage_desktop-Amin/index.html
+++ b/homepage_desktop-Amin/index.html
@@ -17,7 +17,10 @@
 
     <header class="main-header">
         <nav class="container">
-            <div class="logo">NextMind</div>
+            <div class="logo">
+                <i class="fas fa-circle-nodes"></i>
+                NextMind
+            </div>
             <ul class="nav-menu">
                 <li><a href="#hero">خانه</a></li>
                 <li><a href="#services">خدمات</a></li>
@@ -65,7 +68,7 @@
                     <p>ما یک تیم خلاق از مهندسان و تحلیلگران هستیم که ماموریت داریم بهترین راهکارها را برای چالش‌های دیجیتال شما ارائه دهیم. تخصص ما در ترکیب هوش مصنوعی، تکنولوژی و طراحی است تا به شما مزیت رقابتی بدهیم.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=600" alt="تیم ما">
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=600&auto=format&fit=crop&q=60" alt="تیم ما">
                 </div>
             </div>
         </section>
@@ -74,21 +77,21 @@
             <h2 class="section-title">نمونه کارهای موفق</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                     <img src="https://images.pexels.com/photos/326503/pexels-photo-326503.jpeg?auto=compress&cs=tinysrgb&w=400" alt="پروژه داشبورد آنالیتیکس">
+                     <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=400&auto=format&fit=crop&q=60" alt="پروژه داشبورد آنالیتیکس">
                     <div class="portfolio-info">
                         <h4>پروژه داشبورد آنالیتیکس</h4>
                         <p>یک داشبورد تحلیلی سفارشی برای شرکت آلفا.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="https://images.pexels.com/photos/3194519/pexels-photo-3194519.jpeg?auto=compress&cs=tinysrgb&w=400" alt="کمپین بازاریابی بتا">
+                     <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?w=400&auto=format&fit=crop&q=60" alt="کمپین بازاریابی بتا">
                     <div class="portfolio-info">
                         <h4>کمپین بازاریابی بتا</h4>
                         <p>طراحی و اجرای کمپین دیجیتال مارکتینگ ۳۶۰ درجه.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="https://images.pexels.com/photos/2047905/pexels-photo-2047905.jpeg?auto=compress&cs=tinysrgb&w=400" alt="اپلیکیشن موبایل گاما">
+                     <img src="https://images.unsplash.com/photo-1607252650355-f7fd0460eeBF?w=400&auto=format&fit=crop&q=60" alt="اپلیکیشن موبایل گاما">
                     <div class="portfolio-info">
                         <h4>اپلیکیشن موبایل گاما</h4>
                         <p>توسعه اپلیکیشن خدمات مشتریان برای پلتفرم‌های iOS و اندروید.</p>
