--- a/homepage_desktop-Amin/index.html
+++ b/homepage_desktop-Amin/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#services">خدمات</a></li>
                 <li><a href="#about">درباره ما</a></li>
                 <li><a href="#pricing">قیمت‌ها</a></li>
-                <li><a href="#contact" class="btn-primary">تماس</a></li>
+                <li><a href="#contact" class="btn-primary">تماس با ما</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
     <main>
         <section id="hero" class="hero-section">
             <div class="container hero-content">
-                <h1>آینده کسب‌وکار شما، امروز</h1>
+                <h1>آینده کسب و کار شما</h1>
                 <p>ما به رشد سریع‌تر شما با ابزارهای هوشمند و تحلیل داده کمک می‌کنیم.</p>
                 <a href="#pricing" class="btn-cta">طرح‌ها را ببینید</a>
             </div>
@@ -68,7 +68,7 @@
                     <p>ما یک تیم خلاق از مهندسان و تحلیلگران هستیم که ماموریت داریم بهترین راهکارها را برای چالش‌های دیجیتال شما ارائه دهیم. تخصص ما در ترکیب هوش مصنوعی، تکنولوژی و طراحی است تا به شما مزیت رقابتی بدهیم.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=600&auto=format&fit=crop&q=60" alt="تیم ما">
+                    <img src="assets/images/team.jpg" alt="تیم ما">
                 </div>
             </div>
         </section>
@@ -77,21 +77,21 @@
             <h2 class="section-title">نمونه کارهای موفق</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                     <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=400&auto=format&fit=crop&q=60" alt="پروژه داشبورد آنالیتیکس">
+                     <img src="assets/images/analytics.jpg" alt="پروژه داشبورد آنالیتیکس">
                     <div class="portfolio-info">
                         <h4>پروژه داشبورد آنالیتیکس</h4>
                         <p>یک داشبورد تحلیلی سفارشی برای شرکت آلفا.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?w=400&auto=format&fit=crop&q=60" alt="کمپین بازاریابی بتا">
+                     <img src="assets/images/marketing.jpg" alt="کمپین بازاریابی بتا">
                     <div class="portfolio-info">
                         <h4>کمپین بازاریابی بتا</h4>
                         <p>طراحی و اجرای کمپین دیجیتال مارکتینگ ۳۶۰ درجه.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="https://images.unsplash.com/photo-1607252650355-f7fd0460eeBF?w=400&auto=format&fit=crop&q=60" alt="اپلیکیشن موبایل گاما">
+                     <img src="assets/images/mobile-app.jpg" alt="اپلیکیشن موبایل گاما">
                     <div class="portfolio-info">
                         <h4>اپلیکیشن موبایل گاما</h4>
                         <p>توسعه اپلیکیشن خدمات مشتریان برای پلتفرم‌های iOS و اندروید.</p>
