--- a/homepage_desktop-Amin/index.html
+++ b/homepage_desktop-Amin/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <section id="about" class="section-padding bg-light">
-            <div class="container about-flex">
+             <div class="container about-flex">
                 <div class="about-text">
                     <h2 class="section-title">درباره NextMind</h2>
                     <p>ما یک تیم خلاق از مهندسان و تحلیلگران هستیم که ماموریت داریم بهترین راهکارها را برای چالش‌های دیجیتال شما ارائه دهیم. تخصص ما در ترکیب هوش مصنوعی، تکنولوژی و طراحی است تا به شما مزیت رقابتی بدهیم.</p>
@@ -77,21 +77,21 @@
             <h2 class="section-title">نمونه کارهای موفق</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                     <img src="assets/images/analytics.jpg" alt="پروژه داشبورد آنالیتیکس">
+                    <img src="assets/images/analytics.jpg" alt="پروژه داشبورد آنالیتیکس">
                     <div class="portfolio-info">
                         <h4>پروژه داشبورد آنالیتیکس</h4>
                         <p>یک داشبورد تحلیلی سفارشی برای شرکت آلفا.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="assets/images/marketing.jpg" alt="کمپین بازاریابی بتا">
+                    <img src="assets/images/marketing.jpg" alt="کمپین بازاریابی بتا">
                     <div class="portfolio-info">
                         <h4>کمپین بازاریابی بتا</h4>
                         <p>طراحی و اجرای کمپین دیجیتال مارکتینگ ۳۶۰ درجه.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                     <img src="assets/images/mobile-app.jpg" alt="اپلیکیشن موبایل گاما">
+                    <img src="assets/images/mobile-app.jpg" alt="اپلیکیشن موبایل گاما">
                     <div class="portfolio-info">
                         <h4>اپلیکیشن موبایل گاما</h4>
                         <p>توسعه اپلیکیشن خدمات مشتریان برای پلتفرم‌های iOS و اندروید.</p>
@@ -136,16 +136,43 @@
                         <a href="#" class="btn-outline">تماس با فروش</a>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
         <section id="testimonials" class="container section-padding">
-             <h2 class="section-title">نظرات مشتریان ما</h2>
-             <div class="testimonial">
-                <blockquote>
-                    "همکاری با تیم «NextMind» یک نقطه عطف برای کسب‌وکار ما بود. تحلیل‌های دقیق آن‌ها به ما کمک کرد فروش خود را در یک فصل تا ۴۰٪ افزایش دهیم."
-                </blockquote>
-                <cite>- سارا رضایی, مدیرعامل شرکت آلفا</cite>
-             </div>
+             <h2 class="section-title">مشتریان ما چه می‌گویند؟</h2>
+             
+             <div class="carousel-container">
+                <div class="testimonial-slider">
+                    <div class="testimonial-slide active">
+                        <i class="fas fa-quote-right quote-icon"></i>
+                        <p class="avatar"><i class="fas fa-user-tie"></i></p>
+                        <blockquote>
+                            "همکاری با تیم «NextMind» یک نقطه عطف برای کسب‌وکار ما بود. تحلیل‌های دقیق آن‌ها به ما کمک کرد فروش خود را در یک فصل تا ۴۰٪ افزایش دهیم."
+                        </blockquote>
+                        <cite>- سارا رضایی، مدیرعامل شرکت آلفا</cite>
+                    </div>
+                    <div class="testimonial-slide">
+                        <i class="fas fa-quote-right quote-icon"></i>
+                        <p class="avatar"><i class="fas fa-user-cog"></i></p>
+                        <blockquote>
+                            "سرعت و کیفیت پشتیبانی این تیم بی‌نظیر است. آن‌ها همیشه یک قدم جلوتر از نیازهای ما هستند و راهکارهای خلاقانه‌ای ارائه می‌دهند."
+                        </blockquote>
+                        <cite>- رضا احمدی، مدیر فنی بتا</cite>
+                    </div>
+                    <div class="testimonial-slide">
+                        <i class="fas fa-quote-right quote-icon"></i>
+                        <p class="avatar"><i class="fas fa-user-edit"></i></p>
+                        <blockquote>
+                            "اپلیکیشن موبایلی که NextMind برای ما توسعه داد، تجربه کاربری ما را متحول کرد. استفاده از آن بسیار ساده و روان است. کاملاً راضی هستیم."
+                        </blockquote>
+                        <cite>- مریم قاسمی، مدیر محصول گاما</cite>
+                    </div>
+                </div>
+                
+                <button class="carousel-btn prev-btn" aria-label="نظر قبلی">&#10094;</button>
+                <button class="carousel-btn next-btn" aria-label="نظر بعدی">&#10095;</button>
+            </div>
         </section>
 
     </main>
@@ -177,5 +204,6 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
